--- a/source/_layouts/category_index.html
+++ b/source/_layouts/category_index.html
@@ -1,24 +1,17 @@
 ---
 layout: page
-footer: false
+title: "Blog index"
 ---
 
-<div id="blog-archives" class="category">
-{% for post in site.categories[page.category] %}
+<div id="archive-list">
+  {% for for post in site.categories[page.category] %}
   {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-  <div class="row-fluid">
-    <div class="span1">
-  	{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-  	{% unless year == this_year %}
-  	  {% assign year = this_year %}
-  	    <h2>{{ year }}</h2>
-  	{% endunless %}
-    </div>
-    <div class="span11">
-      <article>
-  	{% include archive_post.html %}
-  	</article>
-    </div>
-  </div>
-{% endfor %}
+  {% unless year == this_year %}
+    {% assign year = this_year %}
+    <h2>{{ year }}</h2>
+  {% endunless %}
+    <article>
+      {% include blog/archive_post.html %}
+    </article>
+  {% endfor %}
 </div>
