--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -2,34 +2,11 @@
 layout: default
 ---
 
-<article role="article">
-  {% if page.title %}
-  <header>
-    <div class="jumbotron">
-      {% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}
-    </div>
-    {% if page.date %}<p class="meta">{% include post/date.html %}{{ time }}</p>{% endif %}
-  </header>
-  {% endif %}
-  {{ content }}
-</article>
-{% if site.disqus_short_name and page.comments == true %}
-  <section>
-    <h1>Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
-  </section>
+{% if page.title and page.show_title != false %}
+<h1 class="title indent">
+  {% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}
+</h1>
+<hr class="divider">
 {% endif %}
 
-{% comment %}
-  Sidebars need to be fixed
-
-{% unless page.sidebar == false %}
-<aside class="sidebar">
-  {% if site.page_asides.size %}
-    {% include_array page_asides %}
-  {% else %}
-    {% include_array default_asides %}
-  {% endif %}
-</aside>
-{% endunless %}
-{% endcomment %}
+{{ content }}
